--- a/backend/package.json
+++ b/backend/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "description": "assignemnt for koinX-frontend",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "",
     "start": "node server.js",
-    "dev":"nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "author": "deeptendu kuri",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
