completed functionality and checked with data

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URL="mongodb+srv://deeptendukuri:Auth123@cluster0.zm9a1.mongodb.net/koinxproject?retryWrites=true&w=majority&appName=Cluster0"
+PORT=5000
