--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "deeptendu kuri",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
